--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/main.css">
     <title>Grab - Login</title>
   </head>
   <body>
+      <header>
+        <div class="logo">
+          <img src="./assets/logo-grab.svg" alt="Grab">
+        </div>
+    </header>
+
+      <main>
+
+        <form action="">
+            
+            <label for="">
+              <div class="icon"><img src="./assets/email.svg" alt=""></div>
+              <input class="input" icon='./assets/email.svg' type="text" name="" id="">
+            </label>
+            <label for="">
+              <div><img class="icon" src="./assets/lock.svg" alt=""></div>
+              <input class="input" type="password" name="" id="">
+            </label>
+            <button class="button">Entrar</button>
+        </form>
     
+      </main>
+
+      <footer>
+        <p>problemas para entrar?</p>
+        <span>clique aqui</span>
+      </footer>
   </body>
 </html>
