--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/responsive.css">
     <title>Grab - Login</title>
   </head>
   <body>
+    <div class="login">
       <header>
         <div class="logo">
           <img src="./assets/logo-grab.svg" alt="Grab">
@@ -36,5 +38,9 @@
         <p>problemas para entrar?</p>
         <span>clique aqui</span>
       </footer>
+    </div>
+    <div class="interview" >
+     <img src="./assets/undraw_interview_rmcf.svg" alt="">
+    </div>
   </body>
 </html>
