--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/mobile.css">
     <link rel="stylesheet" href="./styles/responsive.css">
     <title>Grab - Login</title>
   </head>
@@ -39,6 +39,7 @@
         <span>clique aqui</span>
       </footer>
     </div>
+    
     <div class="interview" >
      <img src="./assets/undraw_interview_rmcf.svg" alt="">
     </div>
