projeto finalizado porém falta revisão de codigo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             
             <label id="email" for="">
               <div class="icon"><i class="fas fa-at"></i></div>
-              <input class="input" type="text" name="email" id="">
+              <input class="input"  type="text" name="email" id="input">
               
             </label>
             <p id="error"></p>
